<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkred"
    android:shrinkColumns="*"
    android:stretchColumns="*">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imgPokemonUser"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/pidgey" />

        <LinearLayout
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtNombreUsuario"
                style="@style/PokemonTextItem"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txtAttackLblUser"
                    style="@style/PokemonTextDescItem"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/txt_attack" />

                <TextView
                    android:id="@+id/txtAttackUser"
                    style="@style/PokemonTextValueItem"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="left" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txtDefenseLblUser"
                    style="@style/PokemonTextDescItem"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/txt_defense" />

                <TextView
                    android:id="@+id/txtDefenseUser"
                    style="@style/PokemonTextValueItem"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="left" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBarUser"
                style="@style/pokemonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/txtVersus"
            style="@style/PokemonVersusText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:gravity="center"
            android:text="@string/txt_versus" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <ImageView
            android:id="@+id/imgPokemonOponent"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/pidgey" />

        <LinearLayout
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtNombreOponente"
                style="@style/PokemonTextItem"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txtAttackLblOponent"
                    style="@style/PokemonTextDescItem"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/txt_attack" />

                <TextView
                    android:id="@+id/txtAttackOponent"
                    style="@style/PokemonTextValueItem"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="left" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txtDefenseLblOponent"
                    style="@style/PokemonTextDescItem"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/txt_defense" />

                <TextView
                    android:id="@+id/txtDefenseOponent"
                    style="@style/PokemonTextValueItem"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="left" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBarOponent"
                style="@style/pokemonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/fightButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/txt_button"
            style="@style/PokemonTextItem" />
    </TableRow>

</TableLayout>
